update details of projects

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         Hi! I am Raj
         I am a web developer.
+
+        I have worked on few CLI apps.I'll showcase it tomorrow.
     </body>
     </html>
