added: details about book

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
         I am a web developer.
 
         I have worked on few CLI apps.I'll showcase it tomorrow.
+        I read a book named "Unlimited memory"
+        by kevin Horsely.
+        The book is for improving your memory
+        power through easy to grasp methods.
     </body>
     </html>
