--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
         I am a web developer.
 
         I have worked on few CLI apps.I'll showcase it tomorrow.
-        I read a book named "Unlimited memory"
-        by kevin Horsely.
-        The book is for improving your memory
-        power through easy to grasp methods.
+        I like to swim and travel new places.
     </body>
     </html>
